# wildfire-dispatch-env

./: CITATION.cff  Dockerfile  LICENSE  README.md  __init__.py  baseline_results.json  client.py  demo.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  scenarios.py  tasks.json  test_all.py
server/: app.py  environment.py
